--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: aliceblue;
-    color: black;
+    color: rgb(0, 0, 0);
 }
 
 header {
@@ -18,5 +18,9 @@ h1 h2 h3 {
     border: solid 5px blue;
     display: flex; 
     flex-direction: column;
+    background-color: #4158D0;
+    background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+    color: white;
+
 }
 
