--- a/style.css
+++ b/style.css
@@ -21,6 +21,16 @@ h1 h2 h3 {
     background-color: #4158D0;
     background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
     color: white;
-
+    width: 500px;
+    height: 300px;
+    padding: 25px;
 }
 
+main {
+    margin-top: 25px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    row-gap: 50px;
+}
